tests/semantic/invalid/type_mismatch/string_to_float.src
fn main() {
  float y;
  y = "hello";
}
